[gd_scene load_steps=6 format=3 uid="uid://ddp4w7gvulwda"]

[ext_resource type="Script" path="res://platform_lowered.gd" id="1_mvmss"]
[ext_resource type="Texture2D" uid="uid://dc8dl55ygwtqi" path="res://Texture/Environment/Platforms/Platfrom Black 3x1.png" id="2_bc12f"]
[ext_resource type="Texture2D" uid="uid://bb2bw6t5p6qeb" path="res://Texture/Environment/Platforms/Cog.png" id="3_c0or1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c2c3g"]
size = Vector2(16, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxj3b"]
size = Vector2(12, 3)

[node name="PlatformLowered" type="Node2D"]
position = Vector2(3, 0)
script = ExtResource("1_mvmss")

[node name="start_point" type="Node2D" parent="."]

[node name="end_point" type="Node2D" parent="."]
position = Vector2(0, 24)

[node name="Line2D" type="Line2D" parent="."]
z_index = -2
texture_filter = 1
texture_repeat = 2
width = 4.0
texture = ExtResource("3_c0or1")
texture_mode = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
texture = ExtResource("2_bc12f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_c2c3g")

[node name="Area2D" type="Area2D" parent="StaticBody2D"]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/Area2D"]
position = Vector2(0, -5.5)
shape = SubResource("RectangleShape2D_pxj3b")

[connection signal="body_entered" from="StaticBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="StaticBody2D/Area2D" to="." method="_on_area_2d_body_exited"]
